<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_the_book">About the book</string>
    <string name="about_the_movie">About the movie</string>
    <string name="about_the_tv_show">About the TV show</string>
    <string name="abridged_duration">Abridged · %1$s</string>
    <string name="accept">Accept</string>
    <string name="accessibility_announcement_episode_expanded">Episode description shown</string>
    <string name="accessibility_auto_update_google_apps">Auto-update Google apps, Checked:%1$b</string>
    <string name="accessibility_event_form_field_error">Field: %1$s, error: %2$s</string>
    <string name="accessibility_event_tab_selected">%1$s selected</string>
    <string name="account">Account</string>
    <string name="account_alerts_notification_channel">Account alerts</string>
    <string name="account_country_page_title">Country and profiles</string>
    <string name="account_email_page_title">Email preferences</string>
    <string name="account_family_page_title">Family</string>
    <string name="account_order_history_page_title">Order history</string>
    <string name="account_payment_methods_page_title">Payment methods</string>
    <string name="account_payment_methods_row_subtitle">Add a new payment method</string>
    <string name="account_required_external">To use Google Play Store you need a Google Account.</string>
    <string name="account_rewards_page_title">Rewards</string>
    <string name="account_subscriptions_page_title">Subscriptions</string>
    <string name="active_subscriptions_body">Charges for your subscriptions will continue until you cancel.</string>
    <string name="active_subscriptions_title">%1$s has active subscriptions</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="add_to_library">Add to library</string>
    <string name="add_to_newsstand">Add to Newsstand</string>
    <string name="additional_module_title">Feature for %1$s</string>
    <string name="additional_user_language">Language for %1$s</string>
    <string name="address">Address</string>
    <string name="adr_microformat_newline_replacement">", "</string>
    <string name="agree_to_update_subscription_instrument_to_recommended_one">Yes</string>
    <string name="aia_app_disable_notification_action_text">Open Settings</string>
    <string name="aia_app_disabled_notification_text">%s links will always open in your browser</string>
    <string name="aia_app_disabled_notification_title">Link setting changed</string>
    <string name="aia_disable_app_prompt_message">Always open %s links in your browser?</string>
    <string name="aia_disable_app_prompt_negative_text">Just Once</string>
    <string name="aia_disable_app_prompt_positive_text">Always</string>
    <string name="album_copyright">Copyright</string>
    <string name="album_genre">Genre</string>
    <string name="album_only_purchase">Album only</string>
    <string name="album_release_date">Released on</string>
    <string name="all_access_button_free_trial">Free trial</string>
    <string name="all_access_button_listen_free">LISTEN FREE. START YOUR TRIAL</string>
    <string name="all_access_button_listen_free_alt">LISTEN ON US. START YOUR TRIAL</string>
    <string name="all_access_button_subscribe">Subscribe</string>
    <string name="all_access_label_bottom_alternate_try_all_access">Listen to this album and millions more. First month on us.</string>
    <string name="all_access_label_bottom_available_in_all_access">This album is available to stream with a Google Play Music subscription</string>
    <string name="all_access_label_bottom_try_all_access">Listen to this album and millions more. First month free.</string>
    <string name="all_reviews">ALL REVIEWS</string>
    <string name="all_reviews_sentence_case">All reviews</string>
    <string name="allow">Allow</string>
    <string name="allow_auto_updating">Enable auto update</string>
    <string name="already_has_access_to">It already has access to:</string>
    <string name="also_in_audiobook">Also in %1$s</string>
    <string name="also_in_ebook">Also in Ebook</string>
    <string name="also_needs_access_to">also needs access to</string>
    <string name="app_already_installed_other_user">You cannot install this app because another user has already installed an incompatible version on this device.</string>
    <string name="app_also_needs_access_to">&lt;b>%1$s&lt;/b> also needs access to</string>
    <string name="app_downloads">Downloads</string>
    <string name="app_install_success">Installation successful</string>
    <string name="app_long_name">Google Play Store</string>
    <string name="app_name">Google Play</string>
    <string name="app_needs_access_to">&lt;b>%1$s&lt;/b> needs access to</string>
    <string name="app_size">Download size</string>
    <string name="app_unavailable_message">"This app isn't available. Would you like to visit the Google Play site for more information?"</string>
    <string name="app_update_date">Updated on</string>
    <string name="app_update_size">Update size</string>
    <string name="app_version">Version</string>
    <string name="approval_title">Approval required</string>
    <string name="apps_by">Apps by %1$s</string>
    <string name="archive_label">Remove</string>
    <string name="archiving">Removing…</string>
    <string name="archiving_no_uninstall_confirmation">Remove \"%1$s\" from My Apps &amp; Games?</string>
    <string name="artist_radio_station_text">Start free radio</string>
    <string name="ask_to_buy_dialog_title">Approve purchase</string>
    <string name="asset_removed_bar">\"%1$s\" has been removed.</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="auto_update_available_notification">App updates available</string>
    <string name="auto_update_available_notification_summary">Notify when app updates are available</string>
    <string name="auto_update_completion_notification">Apps were auto-updated</string>
    <string name="auto_update_completion_notification_summary">Notify when apps are automatically updated</string>
    <string name="auto_update_label">Auto-update apps</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download_now">Cancel</string>
    <string name="certification_status_label">Device certification</string>
    <string name="clear_local_history_summary">Remove searches you have performed from this device</string>
    <string name="clear_local_history_title">Clear local search history</string>
    <string name="contact_email_description">The address where you get information about most of the Google products you use with this account. &lt;a href=https://myaccount.google.com/email>More options&lt;/a></string>
    <string name="contact_email_pending_verification">Pending verification</string>
    <string name="contact_email_resend">Resend Verification Email</string>
    <string name="content_description_edit_contact_email">Edit contact email</string>
    <string name="content_filtering_description">Set filters to restrict apps that can be downloaded</string>
    <string name="content_filtering_label">Parental controls</string>
    <string name="debug_cache_and_sync_cache_state">Cache state</string>
    <string name="debug_cache_and_sync_dfe_entries_expected">Number of DFE entries expected</string>
    <string name="debug_cache_and_sync_dfe_entries_synced">Number of DFE entries synced</string>
    <string name="debug_cache_and_sync_last_cache_clear_reason">Last cache clear reason</string>
    <string name="debug_cache_and_sync_last_cache_clear_time">Last cache clear time</string>
    <string name="debug_cache_and_sync_last_sync_completed_time">Last sync completed</string>
    <string name="debug_cache_and_sync_marker_entry_in_cache">Marker entry in cache</string>
    <string name="debug_cache_and_sync_sync_start_time">Sync start time</string>
    <string name="debug_cache_and_sync_sync_state">Sync state</string>
    <string name="debug_environment_action_bar_title">Environment indicator</string>
    <string name="debug_reset">Reset</string>
    <string name="download">Download</string>
    <string name="download_now">Download Now</string>
    <string name="download_settings_label">App download preference</string>
    <string name="fingerprint_auth_settings_description">For Google Play purchases on this device</string>
    <string name="fingerprint_auth_settings_label">Fingerprint authentication</string>
    <string name="flagging_title">Flag as inappropriate</string>
    <string name="from_name_hint_short">Your name</string>
    <string name="from_name_output">From: %1$s</string>
    <string name="gift_send_to_another">If the recipient does not want this gift, you can send it to someone else.</string>
    <string name="instant_apps_play_store_settings_description">Manage Android Instant Apps on this device</string>
    <string name="instant_apps_play_store_settings_label">Use apps without installation</string>
    <string name="label_wishlist_add_action">Add to wishlist</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="os_licenses_label">Open source licenses</string>
    <string name="os_licenses_summary">License details for open source software</string>
    <string name="purchase_auth_settings_label">Require authentication for purchases</string>
    <string name="sample">Free sample</string>
    <string name="search_hint">Search Google Play</string>
    <string name="send_gift">Send gift</string>
    <string name="settings_about_header">About</string>
    <string name="settings_build_version">Play Store version</string>
    <string name="settings_general_section_header">General</string>
    <string name="settings_notifications_section_header">Notifications</string>
    <string name="settings_notifications_section_summary">Manage notification settings</string>
    <string name="settings_user_controls_section_header">User controls</string>
    <string name="share">Share</string>
    <string name="to_email_hint_short">Recipient email address</string>
    <string name="to_email_output">To: %1$s</string>
    <string name="uninstall">Uninstall</string>
    <string name="update">Update</string>
    <string name="verify_parent_settings_description">Notify me if other sources attempt to update apps</string>
    <string name="verify_parent_settings_label">Protect my updates</string>
</resources>