<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:finsky="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_general_section_header" android:key="category-general">
        <Preference android:title="@string/settings_notifications_section_header" android:key="notifications-settings" android:summary="@string/settings_notifications_section_summary" />
        <Preference android:title="@string/download_settings_label" android:key="download-mode" />
        <com.google.android.finsky.settings.SettingsListPreference android:title="@string/auto_update_label" android:key="auto-update-mode" />
        <CheckBoxPreference android:title="@string/auto_add_shortcuts_label" android:key="auto-add-shortcuts" android:summary="@string/auto_add_shortcuts_description" />
        <Preference android:title="@string/clear_local_history_title" android:key="clear-history" android:summary="@string/clear_local_history_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_notifications_section_header" android:key="category-notifications">
        <CheckBoxPreference android:title="@string/auto_update_available_notification" android:key="update-notifications" android:summary="@string/auto_update_available_notification_summary" />
        <CheckBoxPreference android:title="@string/auto_update_completion_notification" android:key="update-completion-notifications" android:summary="@string/auto_update_completion_notification_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_user_controls_section_header" android:key="category-user-controls">
        <Preference android:title="@string/content_filtering_label" android:key="content-level" android:summary="@string/content_filtering_description" />
        <CheckBoxPreference android:title="@string/fingerprint_auth_settings_label" android:key="fingerprint-auth" android:summary="@string/fingerprint_auth_settings_description" />
        <Preference android:title="@string/purchase_auth_settings_label" android:key="purchase-auth" />
        <Preference android:title="@string/instant_apps_play_store_settings_label" android:key="instant-apps" android:summary="@string/instant_apps_play_store_settings_description" />
        <CheckBoxPreference android:title="@string/verify_parent_settings_label" android:key="verify-parent" android:summary="@string/verify_parent_settings_description" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_about_header" android:key="category-about">
        <Preference android:title="@string/os_licenses_label" android:key="os-licenses" android:summary="@string/os_licenses_summary" />
        <Preference android:title="@string/settings_build_version" android:key="build-version" />
        <Preference android:title="@string/certification_status_label" android:key="certification-status" />
    </PreferenceCategory>
</PreferenceScreen>