<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:finsky="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/gift_dialog_header" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/GiftEmailHeaderPadding">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gifting_white_36" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gift_email_horizontal_padding" android:layout_marginRight="0.0dip">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send_gift" style="@style/GiftEmailTitleText" />
            <LinearLayout android:orientation="vertical" android:id="@id/item_title_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/item_title" android:paddingLeft="0.0dip" android:paddingRight="4.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/GiftEmailItemText" />
                <TextView android:id="@id/item_offer_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/GiftEmailItemText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/GiftEmailPadding">
            <com.google.android.finsky.frameworkviews.LabelEditText android:id="@id/to_email_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/to_email_hint_short" android:inputType="textEmailAddress" finsky:labelFormat="@string/to_email_output" />
            <com.google.android.finsky.frameworkviews.LabelEditText android:id="@id/from_name_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/from_name_hint_short" android:inputType="textPersonName|textCapWords" finsky:labelFormat="@string/from_name_output" />
            <include android:id="@id/gift_message_text" layout="@layout/input_with_character_counter" />
            <TextView android:textSize="@dimen/play_purchase_small_size" android:id="@id/gift_email_copy" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/play_purchase_small_size" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gift_send_to_another" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>