<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_cache_state" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_cache_state" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_sync_state" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_sync_state" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_last_sync_completed_time" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_last_sync_completed_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_last_cache_clear_time" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_last_cache_clear_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_last_cache_clear_reason" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_last_cache_clear_reason" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/debug_cache_and_sync_sync_start_time_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_sync_start_time" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_sync_start_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_dfe_entries_expected" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_dfe_entries_expected" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_dfe_entries_synced" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_dfe_entries_synced" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/debug_cache_and_sync_marker_entry_in_cache_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
        <TextView android:textStyle="bold" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_cache_and_sync_marker_entry_in_cache" />
        <TextView android:textStyle="bold" android:gravity="end" android:layout_gravity="end" android:id="@id/cache_and_sync_marker_entry_in_cache" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>