<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/override_phenotype_dialog_content" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/override_phenotype_search_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" />
    <android.support.v7.widget.RecyclerView android:id="@id/override_phenotype_flags_container" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:orientation="horizontal" android:id="@id/override_phenotype_button_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/override_phenotype_button_reset" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/debug_reset" android:layout_weight="1.0" />
        <Button android:id="@id/override_phenotype_button_cancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
        <Button android:id="@id/override_phenotype_button_ok" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>