<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/filter_list_dialog_content" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/filter_list_search_text" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:id="@id/filter_list_scroll_section" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.8">
        <LinearLayout android:orientation="vertical" android:id="@id/filter_list_dynamic_targets_list" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/filter_list_button_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/filter_list_button_reset" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/debug_reset" android:layout_weight="0.33" />
        <Button android:id="@id/filter_list_button_cancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/cancel" android:layout_weight="0.33" />
        <Button android:id="@id/filter_list_button_OK" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/ok" android:layout_weight="0.33" />
    </LinearLayout>
</LinearLayout>